<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <TextView android:text="@string/titolo" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textSize="30dp"
        android:id="@+id/textView" />

    <!--EditText
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:id="@+id/editText"
        android:layout_below="@+id/textView"
        android:layout_alignParentStart="true"
        android:layout_marginTop="28dp" />-->

    <SeekBar
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:id="@+id/seekBar"
        android:max="49"
        android:layout_below="@+id/textView2"
        android:layout_toLeftOf="@+id/textView5"
        android:layout_toRightOf="@+id/textView4"
        android:layout_toEndOf="@+id/textView4"
        android:layout_marginBottom="10dp"
        android:splitTrack="false" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/numero_studenti"
        android:id="@+id/textView2"
        android:textSize="25dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:layout_below="@id/textView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/genera"
        android:id="@+id/button"
        android:onClick="GeneraLista"
        android:layout_marginTop="50dp"
        android:layout_below="@+id/seekBar"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/elenco"
        android:id="@+id/textView3"
        android:textSize="20dp"
        android:layout_below="@+id/button"
        android:layout_alignStart="@+id/button"
        android:layout_alignLeft="@+id/button"
        android:layout_marginTop="10dp" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/vuoto"
        android:id="@+id/textViewLista"
        android:layout_below="@+id/textView3"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:textSize="20dp"
        android:textColor="@color/material_blue_grey_800"
        android:layout_marginTop="5dp"
        android:layout_alignParentEnd="true"
        android:scrollbars="vertical"
        android:maxLines = "50"
        android:lines="50"
        android:layout_alignParentRight="true"/>

    <EditText
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:textSize="30dp"
        android:id="@+id/textNumero"
        android:layout_toRightOf="@+id/textView2"
        android:layout_alignBaseline="@+id/textView2"
        android:layout_below="@+id/textView"
        android:textStyle="bold"
        android:textColor="@android:color/holo_blue_dark"
        android:enabled="false" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="1"
        android:id="@+id/textView4"
        android:textSize="20dp"
        android:gravity="center_vertical|center_horizontal"
        android:layout_alignTop="@+id/seekBar"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignBottom="@+id/seekBar" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="50"
        android:id="@+id/textView5"
        android:textSize="20dp"
        android:gravity="center_vertical|center_horizontal"
        android:layout_alignTop="@+id/seekBar"
        android:layout_alignRight="@+id/button"
        android:layout_alignEnd="@+id/button"
        android:layout_alignBottom="@+id/seekBar" />

    <Switch
        android:layout_width="100dp"
        android:layout_height="25dp"
        android:id="@+id/switch1"
        android:layout_toRightOf="@+id/textView6"
        android:layout_marginLeft="10dp"
        android:layout_below="@+id/seekBar" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="Più di 50"
        android:id="@+id/textView6"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/seekBar"
        android:textSize="20dp"
        android:textIsSelectable="true"
        android:gravity="center_vertical|center_horizontal" />


</RelativeLayout>
